--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -32,8 +32,9 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "524485f9",
+   "id": "a6e9b9a9",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -45,12 +46,25 @@
     "- As we progress along to further topics, let us learn how Anaconda can be helpful. Anaconda allows to keep track of modules required in data science along with appropriate version.\n",
     "- It also allows to create environments which are helpful to run multiple versions of software, modules and more.\n",
     "- pip and conda forge allows for these without a GUI using command line as well.\n",
-    "- [More](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-with-commands) documentation on Conda to create environments are available here."
+    "- [More](https://conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#creating-an-environment-with-commands) documentation on Conda to create environments are available here.\n",
+    "- Documentation regarding modules is also present as seen below:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95732c6f",
+   "id": "ca4d5e76",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src = 'figs/anaconda_library.png' alt=\"Anaconda Learning Library\" style=\"width:200px; height:200px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a5cf4e4",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bde13d",
+   "id": "9088549d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -119,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ff6ce8",
+   "id": "78840c19",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -130,9 +144,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6dbe57d5",
+   "metadata": {},
+   "source": [
+    "## Aims of the Workshop\n",
+    "\n",
+    "- Python Install\n",
+    "- Python Syntax\n",
+    "    + Variable\n",
+    "    + Indentation\n",
+    "    + Comments\n",
+    "- Data Types\n",
+    "    + Text Type: str\n",
+    "    + Numeric Types: int, float, complex\n",
+    "    + Sequence Types: list, tuple, range\n",
+    "    + Mapping Type:\tdict\n",
+    "    + Set Types: set, frozenset\n",
+    "    + Boolean Type:\tbool\n",
+    "- Basic Modules and respective Functions\n",
+    "    + Numpy: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
+    "    + Pandas: DataFrames, \n",
+    "- Data Manipulation\n",
+    "- Data Download\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05a1d4c4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Let's get Started\n",
+    "\n",
+    "- We will be working on Jupyter Notebook to open a `Practice.ipynb` located in the [git repository](https://github.com/suryaeada9/ucsas_intro_python).\n",
+    "- Download the file `Practice.ipynb`\n",
+    "- Open a Jupyter notebook from Anaconda GUI or from command line using command `jupyter notebook`\n",
+    "- Open the `Practice.ipynb` file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0748068",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Jupyter Notebook\n",
+    "\n",
+    "- In order to work with a jupyter notebook that allows for `markdown` and `code chunks`, it is most importanat to note the difference between `command` mode and `edit` mode. \n",
+    "    + `Command` mode is activated when a `blue border` is around the highlighted chunk and often can be obtained by pressing `ESC`\n",
+    "    + This implies that you can add a new chunk using `A` or `B`, change the current chunk into a markdown chunk using `M`, or a code chunk using `Y`, activate help to find all shortcuts using `H` \n",
+    "    + During the `Command` mode anything you type is considered a command for the notebook and will not be typed into the chunk. \n",
+    "    + `Edit` mode is activated when a `green border` is highlighting the chunk you are at and can be attained by pressing `Enter`.\n",
+    "    + This implies you are editing the current chunk by writing code or text depending on the type of chunk it is.\n",
+    "    + A code chunk can be determined by a `In []` to the left of the chunk and a markdown chunk does not have a `In []`. Moreover, a markdown chunk can be run using `CMD + ENTER` in which case it looks like a PDF."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3235a68b",
+   "id": "43a3d413",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6711292e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e8ce6b",
+   "id": "dbe14681",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c90a6c6",
+   "id": "b99978be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3faeffc8",
+   "id": "a258619b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dde204a",
+   "id": "b6eefbb2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -172,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32f8e8a",
+   "id": "a1e50b53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba5ba7e4",
+   "id": "bc5aaec4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -188,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c20f5a73",
+   "id": "0484558c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -196,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34adbabc",
+   "id": "5c3c8bad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -204,31 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad80ca0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bb6c6e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a572da6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa220b3f",
+   "id": "0a5c195a",
    "metadata": {},
    "outputs": [],
    "source": []
