--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -10,8 +10,12 @@
    },
    "source": [
     "# Introduction to Python\n",
-    "## UCSAS 2021\n",
-    "### Surya Teja Eada"
+    "\n",
+    "## [UCSAS 2021](https://statds.org/events/ucsas2021/)  Conference\n",
+    "\n",
+    "## Surya Teja Eada\n",
+    "\n",
+    "## October 09, 2021"
    ]
   },
   {
@@ -19,7 +23,7 @@
    "id": "f80c7746",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -27,14 +31,61 @@
     "\n",
     "- Welcome to today's workshop for Introduction to Python as part of [UCSAS 2021](https://statds.org/events/ucsas2021/) Conference.\n",
     "- This workshop aims at giving a quick tour to Python\n",
-    "- The workshop may slightly lean towards statistics, data visualizations.\n",
-    "- Prerequsites: A laptop with Anaconda installed. Anaconda can be downloaded for windows users [here](https://repo.anaconda.com/archive/Anaconda3-2020.07-Windows-x86_64.exe) and for Mac users [here](https://repo.anaconda.com/archive/Anaconda3-2020.07-MacOSX-x86_64.pkg)."
+    "- The workshop may slightly lean towards statistics, data visualizations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ba689d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## About Me\n",
+    " \n",
+    "<!-- <img src = 'figs/profile.JPG' alt=\"Anaconda Learning Library\" style=\"width:200px; height:200px; align:right;\"/> -->\n",
+    "\n",
+    "<div class=\"wrapingimage\">   \n",
+    "<img src=    \n",
+    "\"figs/profile.JPG\" height=\"100px\" width=\"100px\"  \n",
+    "alt=\"image\">\n",
+    "</div>  \n",
+    "\n",
+    "Third year Ph.D. student from Department of Statistics at UConn\n",
+    "\n",
+    "**Research Interests**: \n",
+    "   - Stochastic Processes, Diffusion Processes.\n",
+    "   - Financial Risk Modeling, Model Risk Assessment.\n",
+    "   \n",
+    "**Aspirations**:\n",
+    "   - Collaborate in various domains to contribute with Statistics.\n",
+    "   - Research and Academics\n",
+    "   \n",
+    "**Hobbies**:\n",
+    "   - Sports, Painting, Travel, Learning new things"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c454468",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Prerequisites\n",
+    "\n",
+    "- Prerequsites: A laptop with Anaconda installed. Anaconda can be downloaded for windows users [here](https://repo.anaconda.com/archive/Anaconda3-2020.07-Windows-x86_64.exe) and for Mac users [here](https://repo.anaconda.com/archive/Anaconda3-2020.07-MacOSX-x86_64.pkg).\n",
+    "- The slides and Practice workbook for today's workshop can be found at: [Github UCSAS 2021](https://github.com/suryaeada9/ucsas_intro_python)"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "a6e9b9a9",
+   "id": "908ba4b1",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -52,36 +103,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca4d5e76",
+   "id": "a21d3627",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "<img src = 'figs/anaconda_library.png' alt=\"Anaconda Learning Library\" style=\"width:200px; height:200px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a5cf4e4",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## About Me\n",
-    "\n",
-    "- Third year Ph.D. student from Department of Statistics at UConn\n",
-    "- **Research Interests**: \n",
-    "    + Stochastic Processes, Diffusion Processes.\n",
-    "    + Financial Risk Modeling, Model Risk Assessment.\n",
-    "- **Aspirations**:\n",
-    "    + Collaborate in various domains to contribute with Statistics.\n",
-    "    + Research and Academics\n",
-    "- **Hobbies**:\n",
-    "    + Sports, Painting, Travel, Learning new things"
+    "<img src = 'figs/anaconda_library.png' alt=\"Anaconda Learning Library\" align=\"center\" style=\"width:600px; height:600px;\"/>"
    ]
   },
   {
@@ -120,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9088549d",
+   "id": "3c907162",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -133,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78840c19",
+   "id": "cffb7884",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -145,8 +174,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dbe57d5",
-   "metadata": {},
+   "id": "3b5afe76",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Python Intro\n",
+    "\n",
+    "- Python is one of the most promising programming language released in 1991 by `Guido Van Rossum`.\n",
+    "- It is useful for creation of web applications, for software development, and now a lot in data science and constantly evolving.\n",
+    "- It has an easy `syntax` similar to English, simple to read and write.\n",
+    "- The most recent major version of Python is `Python 3` although Python 2 is still used majorly inside mac systems for development.\n",
+    "- We can use Python via `command line`, IDE's like `PyCharm`, or applications such as `Jupyter Notebook`. \n",
+    "- Python works on all the different platforms like `Windows, Mac, Linux`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555c3c16",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Aims of the Workshop\n",
     "\n",
@@ -155,23 +207,24 @@
     "    + Variable\n",
     "    + Indentation\n",
     "    + Comments\n",
-    "- Data Types\n",
-    "    + Text Type: str\n",
-    "    + Numeric Types: int, float, complex\n",
-    "    + Sequence Types: list, tuple, range\n",
-    "    + Mapping Type:\tdict\n",
-    "    + Set Types: set, frozenset\n",
-    "    + Boolean Type:\tbool\n",
+    "- Data Types: Mutable and Immutable\n",
+    "    + **Text Type**: `str`\n",
+    "    + **Numeric Types**: `int, float, complex`\n",
+    "    + **Sequence Types**: `list, tuple, range`\n",
+    "    + **Mapping Type**:\t`dict`\n",
+    "    + **Set Types**: `set, frozenset`\n",
+    "    + **Boolean Type**:\t`bool`\n",
     "- Basic Modules and respective Functions\n",
-    "    + Numpy: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
-    "    + Pandas: DataFrames, \n",
-    "- Data Manipulation\n",
-    "- Data Download\n"
+    "    + **`Numpy`**: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
+    "    + **`Pandas`**: DataFrames, Data Manipulation\n",
+    "    + **`Scipy`**: Stats functions, optimize functions\n",
+    "    + **`Matplotlib`**: Visualization\n",
+    "- Miscellaneous"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "05a1d4c4",
+   "id": "d4cdc469",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -180,7 +233,7 @@
    "source": [
     "## Let's get Started\n",
     "\n",
-    "- We will be working on Jupyter Notebook to open a `Practice.ipynb` located in the [git repository](https://github.com/suryaeada9/ucsas_intro_python).\n",
+    "- We will be working on Jupyter Notebook to open a `Practice.ipynb` located in the [Github UCSAS 2021](https://github.com/suryaeada9/ucsas_intro_python).\n",
     "- Download the file `Practice.ipynb`\n",
     "- Open a Jupyter notebook from Anaconda GUI or from command line using command `jupyter notebook`\n",
     "- Open the `Practice.ipynb` file"
@@ -188,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0748068",
+   "id": "68c6b2ba",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -203,25 +256,26 @@
     "    + During the `Command` mode anything you type is considered a command for the notebook and will not be typed into the chunk. \n",
     "    + `Edit` mode is activated when a `green border` is highlighting the chunk you are at and can be attained by pressing `Enter`.\n",
     "    + This implies you are editing the current chunk by writing code or text depending on the type of chunk it is.\n",
-    "    + A code chunk can be determined by a `In []` to the left of the chunk and a markdown chunk does not have a `In []`. Moreover, a markdown chunk can be run using `CMD + ENTER` in which case it looks like a PDF."
+    "    + A code chunk can be determined by a `In []` to the left of the chunk and a markdown chunk does not have the same. Moreover, a markdown chunk can be run using `CMD + ENTER` in which case it looks like a PDF."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43a3d413",
+   "cell_type": "markdown",
+   "id": "c0eb99f5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Python Syntax & Indentation\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6711292e",
+   "id": "c014c9ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe14681",
+   "id": "227cb60c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99978be",
+   "id": "d0c1693b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -245,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a258619b",
+   "id": "cb25ea4d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6eefbb2",
+   "id": "619410d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -261,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1e50b53",
+   "id": "d027823c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5aaec4",
+   "id": "8603615a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -277,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0484558c",
+   "id": "f12bbd76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -285,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c3c8bad",
+   "id": "d963d2af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -293,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a5c195a",
+   "id": "33b81814",
    "metadata": {},
    "outputs": [],
    "source": []
